updated colour scheme to fix accessibility contrast

--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -25,7 +25,7 @@ body .markdown-section {
     --link-text-decoration--hover: underline!important;
 
     --sidebar-name-color: #002145!important;
-    --sidebar-nav-link-color: #757575!important;
+    --sidebar-nav-link-color: #5E6A71!important; /* UBC grey; darker for accessible contrast on light backgrounds */
     --sidebar-nav-link-color--active: #002145!important;
     --sidebar-nav-link-border-color--active: #002145!important;
 
@@ -45,7 +45,7 @@ body .markdown-section {
         no-repeat 5px center / 5px 6px
         linear-gradient(135deg, transparent 2.75px, #002145 2.75px 4.25px, transparent 4.25px)!important;
 
-    --navbar-root-color: #757575!important;
+    --navbar-root-color: #5E6A71!important;
     --navbar-root-color--active: #002145!important;
 
     --blockquote-border-color: #757b7f!important;
